# MemoAssistant

./: .gitignore  CMakeLists.txt  TaskManageEventBus.cpp  TaskManageEventBus.h  database.cpp  database.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  publicheader.h  userchoicedialog.cpp  userchoicedialog.h
CustomWidgets/: CalendarView.cpp  CalendarView.h  DataTimePicker.cpp  DataTimePicker.h  DateTimePicker.cpp  DateTimePicker.h  ManageTaskWidget.cpp  ManageTaskWidget.h  TaskCard.cpp  TaskCard.h
Pages/: p_about.cpp  p_about.h  p_docker.cpp  p_docker.h  p_help.cpp  p_help.h  p_home.cpp  p_home.h  p_manage.cpp  p_manage.h  p_report.cpp  p_report.h  p_setting.cpp  p_setting.h  p_timeline.cpp  p_timeline.h
lib/: ElaWidgetTools.lib
res/: res.qrc
